# skyrace

./: Cargo.toml  README.md  race_track.json
shaders/: cactus.frag  cactus.vert  sky.frag  sky.vert  terrain.frag  terrain.vert  track.frag  track.vert
src/: ai_driver.rs  cacti.rs  camera_on_car.rs  car.rs  car_driver.rs  ground.rs  gui.rs  line_system.rs  main.rs  playback_driver.rs  sky.rs  sounds.rs  spline.rs  spline_editor.rs  sun_mover.rs  terrain.rs  track.rs  utilities.rs  wheel_mark.rs
