[package]
name = "skyrace"
version = "0.1.0"
authors = ["Frontier789 <fr0nt13r789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glui = { path = "../glui", features = ["serializable"] }
glui_proc = { path = "../glui_proc" }
serde = {version = "*", features = ["derive"]}
serde_json = "*"
notify = "4.0.15"
