[package]
name = "skyrace"
version = "0.1.0"
authors = ["Frontier789 <fr0nt13r789@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glui = { git = "https://github.com/Frontier789/glui", features = ["serializable"], version = "0.1.4" }
glui_proc = { git = "https://github.com/Frontier789/glui_proc", version = "0.1.1" }
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
notify = "4.0.15"
noise = "0.8.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rand_xorshift = "0.3.0"
rodio = "0.11.0"
